--- a/css/stilos_cv.css
+++ b/css/stilos_cv.css
@@ -39,10 +39,15 @@ a:hover {
   text-decoration: underline;
 }
 
-a img:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+.galeria img:hover {
+  filter: grayscale(80%);
   border-radius: 9px;
 }
+
+/* a img:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 9px;
+} */
 
 footer {
   text-align: center;
