--- a/css/stilos_cv.css
+++ b/css/stilos_cv.css
@@ -39,9 +39,13 @@ a:hover {
   text-decoration: underline;
 }
 
-.galeria img:hover {
-  filter: grayscale(80%);
+.galeria img {
+  filter: grayscale(100%);
   border-radius: 9px;
+}
+
+.galeria img:hover {
+  filter: grayscale(0%);
 }
 
 /* a img:hover {
