--- a/css/stilos_cv.css
+++ b/css/stilos_cv.css
@@ -1,8 +1,15 @@
+/* * {
+  margin: 0px;
+  padding: 0px;
+} */
+
 body {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1));
   color: rgb(255, 237, 215);
   font-family: "Montserrat", sans-serif;
-  margin: 25px;
+  margin: 15px;
+  padding: 15px;
+  border: 1px;
 }
 
 .perfil {
